fix: adjust spacing and padding for improved layout consistency

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,8 @@
   box-sizing: border-box;
 }
 
-html, body{
+html,
+body {
   color: var(--rdc-secondary);
   font-family: 'Open Sans Variable', sans-serif;
   font-variation-settings: "wdth" 80;
@@ -44,18 +45,18 @@ html, body{
 header .flex-container {
   justify-content: space-between;
   align-items: center;
-  gap: 2rem;
+  gap: 1.6rem;
 }
 
 /*#region Navigation menu*/
 .nav {
-  gap: 3.2rem;
   align-items: center;
-  & a{
-    padding: 5% 0%;
+
+  & a {
+    padding: 7% 0%;
     color: inherit;
     font-weight: 700;
-    font-size: 0.8rem;
+    font-size: 14px;
     text-decoration: none;
     text-transform: uppercase;
     position: relative;
@@ -78,10 +79,11 @@ header .flex-container {
 main {
   background-color: var(--rdc-bg);
   color: white;
+  font-size: 18px;
 
-  & #containerMain{
-     padding-top: 3.1rem;
-     padding-bottom: 3.1rem;
+  & #containerMain {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
   }
 }
 
@@ -89,25 +91,26 @@ main {
 /* #region BandIcon*/
 
 .icon-band {
-    background-color: var(--rdc-primary);
-    color: white;
-    text-transform: uppercase;
-    justify-content: space-between;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+  background-color: var(--rdc-primary);
+  color: white;
+  text-transform: uppercase;
+  justify-content: space-between;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  font-size: 14px;
 
-    & .card {
-        display: flex;
-        align-items: center;
-        gap: 1rem;
+  & .card {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 
-        & img {
-            width: 60px;
-            height: 60px;
-            object-fit: contain;
-            display: block;
-        }
+    & img {
+      width: 60px;
+      height: 60px;
+      object-fit: contain;
+      display: block;
     }
+  }
 }
 
 
@@ -117,95 +120,103 @@ main {
 /* #region Footer*/
 
 /*#region Banner*/
-.banner{
-    background-image: url(./assets/img/footer-bg.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    overflow: hidden;    
-    display: flex;
-    gap: 2rem;
-    padding-top: 2.3rem;
-    padding-bottom: 3.4rem;
+.banner {
+  background-image: url(./assets/img/footer-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  gap: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
 
 }
-.banner > *{
+
+.banner>* {
   position: relative;
   z-index: 1;
 }
 
-#logoBg{
-    position: absolute;
-    right: 2rem;
-    z-index: 0;
-    top: -95px;
-    right: 130px;
-    pointer-events: none;  
+#logoBg {
+  position: absolute;
+  right: 2rem;
+  z-index: 0;
+  top: -95px;
+  right: 130px;
+  pointer-events: none;
 }
 
-.leftCol{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 1.25rem;
+.leftCol {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
-.linkCard{
-    color: white;
-    & h2{
-        text-transform: uppercase;
-        padding-bottom: 0.8rem;
-    }
-    
-    & ul{
-        color: #7a7d79;
-        list-style: none;
-        text-transform: capitalize;
-        font-size: 13px;
-    }
+.linkCard {
+  color: white;
 
-    & li{
-      padding: 0.1rem 0;
-    }
+  & h2 {
+    text-transform: uppercase;
+    padding-top: 0.4rem;
+    padding-bottom: 0.7rem;
+    font-size: 21px;
+  }
+
+  & ul {
+    color: #7a7d79;
+    list-style: none;
+    text-transform: capitalize;
+    font-size: 14px;
+  }
+
+  & li {
+    padding: 0.05rem 0;
+  }
 }
 
 /*#endregion Banner*/
 
 
 /* #region SignUp*/
-.bottom-band{
-    align-items: center;
-    justify-content: space-between;
-    background-color: var(--rdc-secondary);
-    padding-top: 1.8rem;
-    padding-bottom: 1.8rem;
+.bottom-band {
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--rdc-secondary);
+  padding-top: 1.8rem;
+  padding-bottom: 1.8rem;
 }
 
-#signUpButton{
-    border: solid var(--rdc-primary);
-    color: white;
-    text-transform: uppercase;
-    text-decoration: none;
+#signUpButton {
+  border: solid var(--rdc-primary);
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 700;
+  padding: 0.75rem;
+}
+
+.follow {
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+
+  & span {
+    color: var(--rdc-primary);
     font-weight: 700;
-    padding: 0.75rem;
-}
-.follow{
-    align-items: center;
-    justify-content: space-between;
-    gap: 2rem;
-    & span{
-        color: var(--rdc-primary);
-        font-weight: 700;
-        text-transform: uppercase;
-        font-size: 21px;
+    text-transform: uppercase;
+    font-size: 21px;
 
-    }
+  }
 }
-.socialLinks{
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
+
+.socialLinks {
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
 }
+
 /* #endregion SignUp*/
 
 
